compiler/tests/success/arm-m4/intrinsic_clz.jazz
export
fn main(reg u32 x) -> reg u32 {
    reg u32 y;
    y = #CLZ(x);
    return y;
}
