compiler/tests/fail/arm-m4/orr_imm_shifted.jazz
export
fn main(reg u32 x) {
    x = #ORR(x, 0x000cb000);
    [x] = x;
}
